--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T13:51:05Z</date>
+						<date>2018-07-11T18:22:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BRWDQE9c3Sm+
-								faBpzdegFQ==
+								RzQZygaXxpRW
+								QqkHInsn/w==
 								</data>
 								<key>Size</key>
-								<integer>147579</integer>
+								<integer>148483</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G5mrbobXY0RI
-								cJAY5jjoZg==
+								RnyAWusIJkOw
+								k6GbzMrU1Q==
 								</data>
 								<key>Size</key>
-								<integer>114260</integer>
+								<integer>114789</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
