--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T17:14:51Z</date>
+						<date>2018-07-11T18:22:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wct5sevHP4I0
-								xkej2c3o/w==
+								xWpGRcONYB3c
+								oE96HmYUIw==
 								</data>
 								<key>Size</key>
-								<integer>153985</integer>
+								<integer>154810</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GS8T4E1qmkR4
-								TXFDvKstuw==
+								cPVlh0ky8AQK
+								Z7OFKh5nEw==
 								</data>
 								<key>Size</key>
-								<integer>106101</integer>
+								<integer>106343</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
