--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-14T15:57:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SVfl/GCrbdOu
-								gKhBZQwCAA==
+								EkWfnzt7JK+n
+								RcQK1s3mSw==
 								</data>
 								<key>Size</key>
-								<integer>90764</integer>
+								<integer>90817</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
