New Download PDG Agenda Button
New Download PDG Agenda Button

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:28:45Z</date>
+						<date>2018-07-14T16:40:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gBmTgekzSpmD
-								Af/FUv385Q==
+								YbBX+KzrpFNm
+								BCB9OwRwIw==
 								</data>
 								<key>Size</key>
-								<integer>156350</integer>
+								<integer>155996</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/X2qDPAG6d0z
-								sCjZj6pyng==
+								0W6Y8/gKIIgm
+								AH9S6iqCTQ==
 								</data>
 								<key>Size</key>
-								<integer>119422</integer>
+								<integer>119264</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
