--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:28:45Z</date>
+						<date>2018-07-14T16:40:08Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KZpqpRA94u+1
-								1xNrNL991w==
+								65i3Fx7q01HM
+								pXOrf++90A==
 								</data>
 								<key>Size</key>
-								<integer>160476</integer>
+								<integer>160122</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -382,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o+7idZDHODed
-								sU7pv49ezw==
+								QC3GRwM25ixL
+								yXsZzfUvUg==
 								</data>
 								<key>Size</key>
-								<integer>111947</integer>
+								<integer>111786</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
