deleted duplicate column netsci
deleted duplicate column netsci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6642,7 +6642,7 @@
 					<key>page58 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T19:47:16Z</date>
+						<date>2018-07-14T19:54:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6811,31 +6811,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ynKb1iaPQFdz
-								zCp/qnZNag==
+								K8zrlYJEwia4
+								tyS0NFDVdw==
 								</data>
 								<key>Size</key>
-								<integer>153004</integer>
+								<integer>128491</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								quIP/+8KgZ6X
-								s6taixQG4g==
+								8r9BvOch9I4u
+								CPt//yc+yw==
 								</data>
 								<key>Size</key>
-								<integer>27663</integer>
+								<integer>26207</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+qbhxEgbzwjY
-								HjyhuiL52A==
+								WPaysiTEt3Zn
+								VdFSlaHDqA==
 								</data>
 								<key>Size</key>
-								<integer>90151</integer>
+								<integer>64213</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8827,8 +8827,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB9RWUJ
-				/FSAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB9RjAY
+				7NmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8838,7 +8838,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB9RWUJ/4KA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB9RjAY8I2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
