--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T19:47:16Z</date>
+						<date>2018-07-14T19:54:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,31 +204,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ynKb1iaPQFdz
-								zCp/qnZNag==
+								K8zrlYJEwia4
+								tyS0NFDVdw==
 								</data>
 								<key>Size</key>
-								<integer>153004</integer>
+								<integer>128491</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								quIP/+8KgZ6X
-								s6taixQG4g==
+								8r9BvOch9I4u
+								CPt//yc+yw==
 								</data>
 								<key>Size</key>
-								<integer>27663</integer>
+								<integer>26207</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+qbhxEgbzwjY
-								HjyhuiL52A==
+								WPaysiTEt3Zn
+								VdFSlaHDqA==
 								</data>
 								<key>Size</key>
-								<integer>90151</integer>
+								<integer>64213</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
