update twitter length on netsci page
update twitter length on netsci page

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T19:54:05Z</date>
+						<date>2018-07-14T20:16:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WPaysiTEt3Zn
-								VdFSlaHDqA==
+								Tmr0LmhKuEQY
+								MXFxJldvPA==
 								</data>
 								<key>Size</key>
-								<integer>64213</integer>
+								<integer>64214</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
