note about mobile domain netsci
note about mobile domain netsci

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T19:47:16Z</date>
+						<date>2018-07-14T20:42:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								itw7L3XKHj0F
-								8vAEbkuuqQ==
+								e1Y6MiaqM7iM
+								wSv4RbEhlw==
 								</data>
 								<key>Size</key>
-								<integer>140828</integer>
+								<integer>142110</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o708N+lYyIMO
-								nfsuhZYvBA==
+								3BEnWUoj5RNP
+								Fe68uy2GbA==
 								</data>
 								<key>Size</key>
-								<integer>77466</integer>
+								<integer>78451</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
