--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -5992,7 +5992,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T19:47:16Z</date>
+						<date>2018-07-14T20:42:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6201,11 +6201,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								itw7L3XKHj0F
-								8vAEbkuuqQ==
+								e1Y6MiaqM7iM
+								wSv4RbEhlw==
 								</data>
 								<key>Size</key>
-								<integer>140828</integer>
+								<integer>142110</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -6221,11 +6221,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								o708N+lYyIMO
-								nfsuhZYvBA==
+								3BEnWUoj5RNP
+								Fe68uy2GbA==
 								</data>
 								<key>Size</key>
-								<integer>77466</integer>
+								<integer>78451</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7588,7 +7588,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:40:08Z</date>
+						<date>2018-07-14T20:35:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7637,11 +7637,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DkJA+22y9L7m
-								qQnHRwrBSg==
+								cj8ARSq+18Tq
+								HSGkSdsMHQ==
 								</data>
 								<key>Size</key>
-								<integer>4134</integer>
+								<integer>4166</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7690,7 +7690,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:40:08Z</date>
+						<date>2018-07-14T20:35:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8729,11 +8729,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CczgcQS6z/xA
-								kUK5wOQMvw==
+								UU94Ku/+iPbb
+								Jjgo1/q23w==
 								</data>
 								<key>Size</key>
-								<integer>3290</integer>
+								<integer>3697</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8823,31 +8823,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB9SMv6
-				/liAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB9SMv7AY6A
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HAfUvYZfJegAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcB9S9hl9c+A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -8855,9 +8855,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
