Update to Symposia background colors
Update to Symposia background colors

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:28:45Z</date>
+						<date>2018-07-14T20:58:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -294,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ujyPDVgyKAKf
-								X6RiGq2N0Q==
+								vKXULQQmlG7N
+								g8dREMMQ3g==
 								</data>
 								<key>Size</key>
-								<integer>136813</integer>
+								<integer>137482</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JXooyBFI25NS
-								gRLa47A+Bw==
+								MSRp1NtpoEtP
+								2MRn8eQTAQ==
 								</data>
 								<key>Size</key>
-								<integer>72414</integer>
+								<integer>72022</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
