--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-14T16:28:45Z</date>
+						<date>2018-07-14T20:58:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tSt1QL8KDIKH
-								Oc/yJdf4KQ==
+								wWfF8ZhnnLRc
+								oqcHDR7/Wg==
 								</data>
 								<key>Size</key>
-								<integer>127226</integer>
+								<integer>131101</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1D5wrvDHaaM6
-								IVebdBcSPg==
+								pOePQVar96yN
+								UYT7M1AO8Q==
 								</data>
 								<key>Size</key>
-								<integer>65627</integer>
+								<integer>66928</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
