Media Page cont.

--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T17:13:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Kdp7hcR33Ehe
-								Bx8hW0esmw==
+								iEMMsqekdne3
+								8FIQdPwpYw==
 								</data>
 								<key>Size</key>
-								<integer>92960</integer>
+								<integer>96392</integer>
 							</dict>
 							<key>files/stacks_page_page22.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1zusSZg/GARn
-								tfxbrkwSJQ==
+								+N17vOS5cXPR
+								JBEL/H3agA==
 								</data>
 								<key>Size</key>
-								<integer>41294</integer>
+								<integer>42342</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
