--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T17:18:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								p5uWc8MIKoNy
-								orL1A1ETLQ==
+								2fIPCJfSuVq0
+								HY5ax51Svw==
 								</data>
 								<key>Size</key>
-								<integer>102196</integer>
+								<integer>97991</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								A+7mjdJpr3Eq
-								o2C1/2ZZ6g==
+								CAsxPfVUSIBt
+								7nj4xeQhcA==
 								</data>
 								<key>Size</key>
-								<integer>39854</integer>
+								<integer>39850</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
