Media Page Cont. Again

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -5740,7 +5740,7 @@
 					<key>page51 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T17:18:43Z</date>
+						<date>2018-07-16T17:30:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5799,11 +5799,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2fIPCJfSuVq0
-								HY5ax51Svw==
+								JKyWhu+RN79L
+								l8dnOnxo7A==
 								</data>
 								<key>Size</key>
-								<integer>97991</integer>
+								<integer>100364</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -5819,11 +5819,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CAsxPfVUSIBt
-								7nj4xeQhcA==
+								yZPAAuIkJ68J
+								q4xi6dSYKQ==
 								</data>
 								<key>Size</key>
-								<integer>39850</integer>
+								<integer>39864</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8817,8 +8817,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+hXqO
-				1UmAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+htOC
+				tbOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8828,7 +8828,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+hXqO2FaA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+htOCuNCA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
