--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/4-Media/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-16T17:18:43Z</date>
+						<date>2018-07-16T17:30:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2fIPCJfSuVq0
-								HY5ax51Svw==
+								JKyWhu+RN79L
+								l8dnOnxo7A==
 								</data>
 								<key>Size</key>
-								<integer>97991</integer>
+								<integer>100364</integer>
 							</dict>
 							<key>files/stacks_page_page51.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CAsxPfVUSIBt
-								7nj4xeQhcA==
+								yZPAAuIkJ68J
+								q4xi6dSYKQ==
 								</data>
 								<key>Size</key>
-								<integer>39850</integer>
+								<integer>39864</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
