Certificate of Grad Studies Edits

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -3710,7 +3710,7 @@
 					<key>page41 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T17:49:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3789,11 +3789,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SNAn5w0XgBn4
-								qqEObkbAwA==
+								Ux29tdlRvxg3
+								KH2/SRKsmg==
 								</data>
 								<key>Size</key>
-								<integer>99345</integer>
+								<integer>96352</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -3809,11 +3809,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iCWsMKLUaNpO
-								U64A611TkA==
+								KsTEt1Rek5yL
+								A67xsaaqpQ==
 								</data>
 								<key>Size</key>
-								<integer>40394</integer>
+								<integer>38413</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8817,8 +8817,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+htOC
-				tbOAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcB+iRGP
+				P9GAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -8828,7 +8828,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+htOCuNCA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcB+iRGPQvaA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
