--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/1-Undergraduate-degrees/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T18:51:20Z</date>
+						<date>2018-07-16T17:49:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SNAn5w0XgBn4
-								qqEObkbAwA==
+								Ux29tdlRvxg3
+								KH2/SRKsmg==
 								</data>
 								<key>Size</key>
-								<integer>99345</integer>
+								<integer>96352</integer>
 							</dict>
 							<key>files/stacks_page_page41.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iCWsMKLUaNpO
-								U64A611TkA==
+								KsTEt1Rek5yL
+								A67xsaaqpQ==
 								</data>
 								<key>Size</key>
-								<integer>40394</integer>
+								<integer>38413</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
